scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,16 @@ ul {
   width: 100vw;
   @apply bg-lightText;
 }
+
+::-webkit-scrollbar {
+  width: 7px;
+  height: 8px;
+  border-radius: 10px;
+ 
+}
+
+::-webkit-scrollbar-thumb {
+  background: #494848;
+  border-radius: 10px;
+}
+
